--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "quiz",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "demon": "nodemon server.js"
+    "demon": "nodemon server.js",
+    "start": "node server.js"
   },
   "babel": {
     "presets": [
@@ -55,5 +55,9 @@
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "nodemon": "^1.18.4"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "description": ""
 }
