--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "node": "^10.12.0",
     "pg-promise": "^8.5.1",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
