--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "pg-promise": "^8.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-websocket": "^2.0.0",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "ws": "^6.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
