--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pg-promise": "^8.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-pose": "^3.3.7",
     "react-websocket": "^2.0.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
